fix: gap between input box and button

--- a/src/components/AgeCalculator/AgeCalculator.module.scss
+++ b/src/components/AgeCalculator/AgeCalculator.module.scss
@@ -22,6 +22,7 @@
             display: flex;
             justify-content: center;
             gap: 20px;
+            padding-bottom: 4px;
 
             @media(max-width: 768px) {
                 gap: 10px;
